Fixed gap between logo

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -63,6 +63,7 @@ body {
   justify-content: center;
   align-items: center;
   flex: 1;
+  gap: 8px;
 }
 
 button {
